welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color.REd)
        ^PatternPicture:10: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color.Yellow)
        ^PatternPicture:17: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color.Green)
        ^PatternPicture:24: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color.Blue)
        ^