welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def faireMotif(){
	avance()
	setBrosseCouleur(Color.REd)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	setBrosseCouleur(Color.Yellow)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	setBrosseCouleur(Color.Green)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	setBrosseCouleur(Color.Blue)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	
}
override def run() {
}
